--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Главная страница</title>
+    <title>FindYourSeries</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
@@ -25,13 +25,17 @@
     </header>
     <main>
         <div class="content">
-            <h2>Это главная страница нашего сайта</h2>
-            <div th:if="${username}" class="welcome-message">
-                <p>Добро пожаловать, <span th:text="${username}"></span>!</p>
-                <p>Ваш email: <span th:text="${email}"></span></p>
-            </div>
-            <div th:unless="${username}">
-                <p>Пожалуйста, войдите или зарегистрируйтесь для доступа к полному функционалу.</p>
+            <!-- Лента текущих просмотров -->
+            
+
+            <!-- Лента рекомендаций (только для авторизованных) -->
+            <div th:if="${username}">
+                <section class="scroll-section recommendations">
+                    <h2>Рекомендуем вам</h2>
+                    <div class="scroll-container">
+                        <!-- Рекомендации будут здесь -->
+                    </div>
+                </section>
             </div>
         </div>
     </main>
